# view-entity-maker

./: .gitignore  Cargo.toml
src/: db.rs  generate.rs  main.rs  models.rs
src/generate/: utils.rs
