[package]
name = "view-entity-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "json", "macros" ] }
clap = { version = "4.4.3", features = ["derive"] }